Test fix for misaligned button

--- a/css/custom.css
+++ b/css/custom.css
@@ -14,6 +14,7 @@ a:hover {
 }
 .menu-title {
     font-weight: 600;
+    padding: 0 0 0 0 ;
     color: #13b479
 }
 .main-title {
